[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.1"
flask = "^2.3.2"
flask-cors = "^3.0.10"
pydantic = "^2.0.2"
pyjwt = "^2.7.0"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.18"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-print
    "T20",
    # pyupgrade
    "UP",
    # Ruff-specific rules
    "RUF",
]

extend-exclude = ["migrations"]

# Same as Black.
line-length = 88

target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
strict_optional = true

[[tool.mypy.overrides]]
module = "main"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[tool.coverage.run]
source = ["main"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]
